Correção recuperação de senha.

--- a/rock-api/src/main/resources/application.properties
+++ b/rock-api/src/main/resources/application.properties
@@ -31,3 +31,8 @@ quarkus.liquibase.migrate-at-start=true
 quarkus.liquibase.change-log=liquibase/master.xml
 
 allowed.origins=*
+
+mail.smtp.host=email-smtp.sa-east-1.amazonaws.com
+mail.smtp.port=587
+mail.username=AKIAWNBZJWY7XW343GUK
+mail.password=BCJIqWaw6AlvJrDGL571On3f6Ku7X1WCCkAXnlDWpddd
