--- a/rock-web/package.json
+++ b/rock-web/package.json
@@ -40,6 +40,7 @@
         "font-awesome": "^4.7.0",
         "fs": "0.0.1-security",
         "html2canvas": "^1.4.1",
+        "html2pdf.js": "^0.10.1",
         "i": "^0.3.7",
         "instascan": "^1.0.0",
         "intl": "1.2.5",
